<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaskFlow</string>
    <string name="taskflow">TaskFlow.</string>
    <string name="your_personal_assistant">your personal assistant</string>
    <string name="welcome_first_time">Welcome! Is this your first time here?</string>
    <string name="please_log_in">Please log in to your account</string>
    <string name="administrator">Administrator</string>
    <string name="employee">Employee</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="register">Register</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="create_account">Please, create an account</string>
    <string name="your_name">Your Name</string>
    <string name="group_name">Group Name</string>
    <string name="enter_group_id">Enter the Group ID provided by your administrator</string>
    <string name="group_id">Group ID</string>
    <string name="password_requirements">Your password must contain:</string>
    <string name="password_minimum_length">At least 6 characters</string>
    <string name="password_numbers">Numbers</string>
    <string name="save">Save</string>
    <string name="hello">Hello, %s</string>
    <string name="create_new_task">Create a new task</string>
    <string name="status">Status</string>
    <string name="not_started">Not Started</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="under_review">Under Review</string>
    <string name="select_status">Select task status</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="select_priority">Select task priority</string>
    <string name="select_employee">Select employee</string>
    <string name="title">Title</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="description">Description</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="back">Back</string>
    <string name="check_internet_connection">Please check your internet connection.</string>
    <string name="fill_all_fields">Please fill all fields.</string>
    <string name="enter_valid_email">Please enter a valid email address.</string>
    <string name="password_requirements_error">Your password must contain at least 6 characters and a number.</string>
    <string name="invalid_role_selected">Selected role is not right.</string>
    <string name="group_not_exist">Group does not exist</string>
    <string name="id_copied">ID copied</string>
    <string name="task_saved_successfully">The task was saved successfully</string>
    <string name="copy_group_id">Copy Group ID</string>
    <string name="sign_out">Sign out</string>
    <string name="log_out_successful">Sign-out successful</string>
    <string name="due_date">Due date: %s</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="enter_email_for_link">Enter your email to receive a link</string>
    <string name="retrieve">Retrieve</string>
    <string name="password_reset_email_sent">Password reset email sent successfully</string>
    <string name="position">Position</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="task_deleted_successfully">Task deleted successfully</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_updated_successfully">Task updated successfully</string>
    <string name="my_team">My Team</string>
    <string name="position_line">Position - %s</string>
    <string name="email_line">Email - %s</string>
    <string name="mobile_number_line">Mobile Number - %s</string>
    <string name="polls">Polls</string>
    <string name="create_new_poll">Create a new poll</string>
    <string name="poll_name">Poll Name</string>
    <string name="options1">Option 1</string>
    <string name="options2">Option 2</string>
    <string name="options3">Option 3</string>
    <string name="enter_poll_title">Enter poll title</string>
    <string name="enter_poll_description">Enter poll description</string>
    <string name="enter_answer_option">Enter answer option</string>
    <string name="poll_saved_successfully">Poll saved successfully</string>
    <string name="vote">Vote</string>
    <string name="select_option">Select an option</string>
    <string name="poll_updated_successfully">Poll updated successfully</string>
</resources>