<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.AddTaskActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/create_new_task"
        app:titleCentered="true"
        app:titleTextAppearance="@style/f25BoldBlack"
        app:titleTextColor="@color/black">

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintVertical_bias="0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dateTextAppearance="@style/f12RegularWhiteBlack123"
                android:theme="@style/CalenderViewCustom"
                android:weekDayTextAppearance="@style/f12RegularBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/f12BoldBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/status" />

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/prioritySpinner"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_priority"
                android:gravity="start|center_vertical"
                android:hint="@string/select_priority"
                android:paddingHorizontal="10dp"
                android:textAppearance="@style/f12RegularBlack"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_padding="8dp"
                app:spinner_arrow_tint="@color/grey"
                app:spinner_item_array="@array/statuses"
                app:spinner_item_height="46dp"
                app:spinner_popup_animation="dropdown"
                app:spinner_popup_background="@color/white"
                app:spinner_popup_elevation="14dp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/f12BoldBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/employee" />

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/employeeSpinner"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_priority"
                android:gravity="start|center_vertical"
                android:hint="@string/select_priority"
                android:paddingHorizontal="10dp"
                android:textAppearance="@style/f12RegularBlack"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_padding="8dp"
                app:spinner_arrow_tint="@color/grey"
                app:spinner_item_array="@array/statuses"
                app:spinner_item_height="46dp"
                app:spinner_popup_animation="dropdown"
                app:spinner_popup_background="@color/white"
                app:spinner_popup_elevation="14dp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/f12BoldBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTitle"
                style="@style/textInputLayoutSmallStyle"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    style="@style/textInputEditTextSmallStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_task_title"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/f12BoldBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDescription"
                style="@style/textInputLayoutSmallStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextDescription"
                    style="@style/textInputEditTextSmallStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|top"
                    android:hint="@string/enter_task_description"
                    android:inputType="textMultiLine"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            style="@style/mediumButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="@string/back" />

        <Space
            android:layout_width="23dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddTask"
            style="@style/mediumButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>